--- a/views/property_add.html
+++ b/views/property_add.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 {% extends "base.html" %} {% block titulo %} Agregar propiedad {% endblock %} {% block contenido_principal %}
 
 <div class="container">
@@ -151,7 +144,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4 o mas">4 o mas
+                            <option value="4">4 o mas
                             </option>
                         </select>
                     </div>
@@ -166,7 +159,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4 o mas">4 o mas
+                            <option value="4">4 o mas
                             </option>
                         </select>
                     </div>
@@ -249,7 +242,7 @@
                             </option>
                             <option value="3">3
                             </option>
-                            <option value="4 o mas">4 o mas
+                            <option value="4">4 o mas
                             </option>
                         </select>
                     </div>
@@ -660,9 +653,6 @@
                         Guardar
                     </button>
                 </div>
-            </div>
-            <div class="row">
-
             </div>
         </div>
 
@@ -1114,9 +1104,6 @@
             }
         </script>
     </form>
-
+</div>
 
     {% endblock %}
-</div>
-</body>
-</html>
