--- a/views/base.html
+++ b/views/base.html
@@ -78,8 +78,8 @@
 <div id="containerParent">
     <!-- Barra de Navegación superior -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">
-            <img class="imgLogo" src="/img/logo.png" alt="logo"/>
+        <a class="link-logo navbar-brand" href="/">
+            <img class="imgLogo" src="/img/arca.png" alt="logo"/>
         </a>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav mr-auto">
