--- a/views/shop.html
+++ b/views/shop.html
@@ -424,7 +424,11 @@
         <ul class="pagination">
             {% for page in pages %}
             <li class="page-item" id="pi-{{page}}">
-                <a class="page-link" href="/properties?pg={{page}}">{{page}}</a>
+                {% if url.includes('?') %}
+                <a class="page-link" href="{{url}}&pg={{page}}">{{page}}</a>
+                {% else %}
+                <a class="page-link" href="{{url}}?pg={{page}}">{{page}}</a>
+                {% endif %}
             </li>
             {% endfor %}
             <script>
