--- a/views/property_add.html
+++ b/views/property_add.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block titulo %} Agregar propiedad {% endblock %} {% block contenido_principal %}
+{% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %} {% block contenido_principal %}
 
 <div class="container">
     <h2 class="sectionHeader">¿Qué tipo de propiedad desea añadir?</h2>
