--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-{% extends "base.html" %} {% block titulo %} Editar propiedad {% endblock %} {% block contenido_principal %}
+{% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria {% endblock %} {% block contenido_principal %}
 
 <div class="container">
     <h2 class="sectionHeader">Edite los campos deseados</h2>
