--- a/views/shop.html
+++ b/views/shop.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block titulo %} Agencia Inmobiliaria RSTemp {% endblock %}
+{% block titulo %} ARCA Inmobiliaria{% endblock %}
 {% block contenido_principal %}
 
 <div class="container">
