--- a/views/user_modify.html
+++ b/views/user_modify.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %} Modificar Contraseña{% endblock %}
+{% block titulo %} ARCA Inmobiliaria{% endblock %}
 
 {% block contenido_principal %}
 
