--- a/views/wishes_mywishes.html
+++ b/views/wishes_mywishes.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block titulo %} Mis publicaciones {% endblock %}
+{% extends "base.html" %} {% block titulo %} ARCA Inmobiliaria{% endblock %}
 
 {% block contenido_principal %}
 <div class="container">
