--- a/views/agent_add.html
+++ b/views/agent_add.html
@@ -5,18 +5,18 @@
 {% block contenido_principal %}
 
 <div class="container">
-    <h2 class="sectionHeader">Registrar usuario</h2>
-    <form class="form-horizontal" method="post" action="/signin">
+    <h2 class="sectionHeader">Crear Agente</h2>
+    <form class="form-horizontal" method="post" action="/agents/add">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true"/>
+                <input type="text" class="form-control" name="name" placeholder="Nombre del Agente" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
+                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Agente"
                        required="true"/>
             </div>
         </div>
@@ -28,15 +28,15 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="password">Password:</label>
+            <label class="control-label col-sm-2" for="password">Contraseña:</label>
             <div class="col-sm-10">
                 <input id="password" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true"/>
+                       placeholder="Contraseña" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Registrarme</button>
+                <button type="submit" class="btn btn-primary">Registrar Agente</button>
             </div>
         </div>
     </form>
