--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block titulo %} Agencia Inmobiliaria Arca {% endblock %}
+{% block titulo %} ARCA Inmobiliaria {% endblock %}
 {% block contenido_principal %}
 
 <div id="carouselIndex" class="carousel slide" data-ride="carousel">
