--- a/views/info.html
+++ b/views/info.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block titulo %} RSTemp {% endblock %}
+{% block titulo %} ARCA Inmobiliaria {% endblock %}
 {% block contenido_principal %}
 
 <div class="container">
