--- a/views/property_details.html
+++ b/views/property_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %} {{Property.name}} {% endblock %}
+{% block titulo %} ARCA Inmobiliaria {% endblock %}
 
 {% block contenido_principal %}
 
