--- a/views/user_passwordRecover.html
+++ b/views/user_passwordRecover.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titulo %} Recuperar Contraseña{% endblock %}
+{% block titulo %}ARCA Inmobiliaria{% endblock %}
 
 {% block contenido_principal %}
 
