Permitir al super-agente editar la información de contacto

--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -12,6 +12,7 @@ html, body {
     text-align: center;
     justify-content: center;
     padding-top: 1.5em;
+    margin-top: 2em;
 }
 
 .btn-wishes {
