--- a/views/property_add.html
+++ b/views/property_add.html
@@ -113,7 +113,7 @@
             <div class="div-field form-row">
                 <label class="control-label col-sm-2" for="description">Descripción:</label>
                 <div class="col-sm-12">
-                    <textarea class="form-control" name="description" id="exampleFormControlTextarea1"
+                    <textarea class="form-control" name="description"
                               rows="5"></textarea>
                 </div>
             </div>
