Manda correo al bajar de precio

--- a/views/property_myproperties.html
+++ b/views/property_myproperties.html
@@ -28,7 +28,7 @@
                 </td>
                 <td>
                     <a class="btn btn-secondary float-right"
-                       href="/property/details/{{ property._id.toString() }}"><span class="far fa-eye"></span></a>
+                       href="/properties/details/{{ property._id.toString() }}"><span class="far fa-eye"></span></a>
                 </td>
                 <td>
                     <a class="btn btn-danger float-right"
