Lo de subir fotos ya funciona genial

--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <h2 class="sectionHeader">Edite los campos deseados</h2>
-    <form class="form-horizontal" method="post" action="/property/edit/{{property._id.toString()}}"
+    <form class="form-horizontal" method="post" action="/properties/edit/{{property._id.toString()}}"
           encType="multipart/form-data">
 
         <div id="divErrorCampos" class="row" style="display: none;">
