Cambio de nombres a seguimiento

--- a/views/messages.html
+++ b/views/messages.html
@@ -2,7 +2,7 @@
 
 {% block contenido_principal %}
 <div class="container">
-    <h2 class="sectionHeader">Mis Deseos</h2>
+    <h2 class="sectionHeader">Mi lista de Seguimiento</h2>
 
     <div id="message-container">
         <form id="send-container">
