--- a/views/wishes_mywishes.html
+++ b/views/wishes_mywishes.html
@@ -2,7 +2,7 @@
 
 {% block contenido_principal %}
 <div class="container">
-    <h2 class="sectionHeader">Mis Deseos</h2>
+    <h2 class="sectionHeader">Mis Seguimientos</h2>
 
     <div class="table-responsive">
         <table class="table table-hover">
